Migrate Preservation events endpoint